--- a/index.html
+++ b/index.html
@@ -93,15 +93,18 @@
             <i class="fa-solid fa-code"></i>
             <h2>Web Design</h2>
             <p>
-              U want a website for business growth contact me. my skills are
-              create a fullresponsive website.
+              Design web applications according to client briefs and modify designs to meet changes in client specifications.
+              Develop web products by coding wireframes into elements that users can interact with Work in a team of web designers,
+              backend developers, and UX designers to meet project goals and create effective user experiences with digital products.
             </p>
             <a href="#">Learn more</a>
           </div>
           <div>
             <i class="fa-brands fa-app-store-ios"></i>
-            <h2>App Design</h2>
-            <p>In this time service is not available</p>
+            <h2>Frontend Design</h2>
+            <p>Building custom websites with coding.
+               Providing website support and management for clients via ticketing system.
+               General web development, including building landing pages, small web applications, and ecommerce.</p>
             <a href="#">Learn more</a>
           </div>
         </div>
@@ -115,10 +118,9 @@
           <div class="work">
             <img src="img/work-1.png" />
             <div class="layer">
-              <h3>Traveling Website</h3>
+              <h3>Metflix Hindustan</h3>
               <p>
-                this website help to decide your aim place. where you want to
-                visit.
+               this is clone website of Metflix
               </p>
               <a href="#"><i class="fas fa-external-link-alt"></i></a>
             </div>
