--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
           <div class="work">
-            <img src="img/work-1.png" />
+            <img src="img/meta2" />
             <div class="layer">
               <h3>Metflix Hindustan</h3>
               <p>
-               this is clone website of Metflix
+               this is clone website of Metflix (Frontend).
               </p>
-              <a href="#"><i class="fas fa-external-link-alt"></i></a>
+              <a href="https://teal-cat-e37a5f.netlify.app/"><i class="fas fa-external-link-alt"></i></a>
             </div>
           </div>
           <div class="work">
