--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
           <div class="work">
-            <img src="img/meta2" />
+            <img src="img/meta2.jpg" />
             <div class="layer">
               <h3>Metflix Hindustan</h3>
               <p>
