--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
             <div class="layer">
               <h3>Hotel Room</h3>
               <p>its help to book your room in any city.</p>
-              <a href="#"><i class="fas fa-external-link-alt"></i></a>
+              <a href="https://somilvaishya.github.io/weather_app/
+"><i class="fas fa-external-link-alt"></i></a>
             </div>
           </div>
         </div>
