--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 this website usefull for all people, whose dont have more time.
                 and book your service at your home.
               </p>
-              <a href="#"><i class="fas fa-external-link-alt"></i></a>
+              <a href="https://somilvaishya.github.io/weather_app/"><i class="fas fa-external-link-alt"></i></a>
             </div>
           </div>
           <div class="work">
@@ -141,7 +141,7 @@
             <div class="layer">
               <h3>Hotel Room</h3>
               <p>its help to book your room in any city.</p>
-              <a href="https://somilvaishya.github.io/weather_app/
+              <a href="https://somilvaishya.github.io/Ourhotel/
 "><i class="fas fa-external-link-alt"></i></a>
             </div>
           </div>
