--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="header">
       <div class="container">
         <nav>
-          <img src="img/logo.png" class="logo" />
+          <img src="img/lo.jpg" class="logo" />
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
