--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="header">
       <div class="container">
         <nav>
-          <img src="img/lo.jpg" class="logo" />
+         <b><h1 style="color: #fff"><span style="color: red;">S</span>omil.</h1></b>
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
